--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "watch": "webpack --mode=development --watch",
     "start": "node dist/bundle.js",
     "build:dev": "npm run clean && webpack --mode=development",
-    "build:prod": "npm run clean && webpack --mode=production"
+    "build:prod": "npm run clean && webpack --mode=production",
+    "lint": "eslint --fix --ext .js src/ test/"
   },
   "keywords": [
     "express",
@@ -32,6 +33,7 @@
     "@babel/runtime": "^7.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "dotenv": "^8.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.3",
@@ -57,16 +59,18 @@
     "babel-register": "^6.26.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.1.0",
-    "dotenv": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^21.3.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-watch": "^3.1.3",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "supertest": "^3.0.0",
@@ -74,31 +78,9 @@
     "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
   },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "plugins": [
-      "import",
-      "jest"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2017,
-      "sourceType": "module"
-    },
-    "env": {
-      "node": true,
-      "jest": true
-    },
-    "extends": [
-      "eslint:recommended"
-    ],
-    "rules": {
-      "jest/no-focused-tests": 2,
-      "jest/no-identical-title": 2
-    }
-  },
   "jest": {
     "testMatch": [
-      "**/__tests__/*.js?(x)"
+      "**/test/*.js?(x)"
     ],
     "testEnvironment": "node",
     "verbose": true
