--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "eslint-plugin-jest": "^21.3.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-watch": "^3.1.3",
+    "husky": "^3.0.4",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "supertest": "^3.0.0",
