--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "repository": "https://github.com/joshuamabina/express-starter",
   "author": "Joshua Mabina <mabinajoshua@gmail.com>",
   "license": "MIT",
-  "engines": {
-    "node": "8.6.0"
-  },
   "scripts": {
     "clean": "rimraf dist",
     "test": "npm run build:dev && jest --detectOpenHandles --forceExit",
@@ -68,6 +65,7 @@
     "eslint-watch": "^3.1.3",
     "husky": "^3.0.4",
     "jest": "^24.8.0",
+    "lint-staged": "^9.2.3",
     "node-sass": "^4.12.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.5",
@@ -87,10 +85,28 @@
     "testEnvironment": "node",
     "verbose": true
   },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint",
+      "git add"
+    ],
+    "*.{md,html}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "nodemonConfig": {
     "ignore": [
       "dist/"
     ],
     "delay": "2500"
+  },
+  "engines": {
+    "node": "8.11.0"
   }
 }
